--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">AllTheRecipes</string>
+    <string name="app_name">ForkRecipe</string>
     <string name="thumbnail">thumbnail</string>
 </resources>
