--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,20 @@
 <resources>
     <string name="app_name">ForkRecipe</string>
     <string name="thumbnail">thumbnail</string>
+    <string name="navigation_new">New</string>
+    <string name="navigation_search">Search</string>
+    <string name="navigation_favorites">Favorites</string>
+
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="toolbar_title_new">Newest recipes</string>
+    <string name="toolbar_title_search">Search recipes</string>
+    <string name="toolbar_title_favorites">Favorite recipes</string>
+
+    <string name="mainURL">https://www.themealdb.com/api/json/v1/1/</string>
+    <string name="title_activity_bot_nav">BotNavActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+
 </resources>
