Added categories and search bar. The search bat isn't working currently

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_activity_navigation">Navigation</string>
 
+    <string name="searchToolTipText">Search recipes</string>
+
 </resources>
